--- a/values.yaml
+++ b/values.yaml
@@ -368,7 +368,18 @@ initContainers:
     containerSecurityContext:
       # initContainers.rootless.containerSecurityContext.enabled Enable security context for the rootless initContainer
       enabled: true
+      # initContainers.rootless.containerSecurityContext.runAsUser User ID for the DocSpace rootless initContainer
       runAsUser: 0
+      # containerSecurityContext.allowPrivilegeEscalation Controls whether a process can gain more privileges than its parent process
+      allowPrivilegeEscalation: false
+      # containerSecurityContext.seLinuxOptions Defines SELinux labels for the DocSpace rootless initContainer
+      seLinuxOptions: {}
+      # containerSecurityContext.seccompProfile Defines the Seccomp profile for the DocSpace rootless initContainer
+      seccompProfile:
+        type: RuntimeDefault
+      # containerSecurityContext.capabilities Defines the privileges granted to the process
+      capabilities:
+        drop: ["ALL"]
   # initContainers.custom Custom initContainers parameters
   # Does not apply to the following services: `Docs`, `Router`, `Opensearch` and `Proxy Frontend`. The corresponding individual parameters are used for them
   # Example:
