--- a/templates/services/proxy-frontend.yaml
+++ b/templates/services/proxy-frontend.yaml
@@ -15,12 +15,12 @@ metadata:
   {{- end }}
 spec:
   ports:
-  - port: {{ .Values.proxyFrontend.containerPorts.http }}
+  - port: {{ .Values.proxyFrontend.service.port.http }}
     name: http
-    targetPort: {{ .Values.proxyFrontend.containerPorts.httpTargetPort }}
-  - port: {{ .Values.proxyFrontend.containerPorts.https }}
+    targetPort: {{ .Values.proxyFrontend.containerPorts.http }}
+  - port: {{ .Values.proxyFrontend.service.port.https }}
     name: https
-    targetPort: {{ .Values.proxyFrontend.containerPorts.httpsTargetPort }}
+    targetPort: {{ .Values.proxyFrontend.containerPorts.https }}
   selector:
     app: proxy-frontend
     {{- if .Values.commonLabels }}
