--- a/templates/applications/proxy-frontend.yaml
+++ b/templates/applications/proxy-frontend.yaml
@@ -117,9 +117,9 @@ spec:
         securityContext: {{- include "docspace.securityContext" $csc | nindent 10 }}
         {{- end }}
         ports:
-        - containerPort: {{ .Values.proxyFrontend.containerPorts.httpTargetPort }}
+        - containerPort: {{ .Values.proxyFrontend.containerPorts.http }}
           name: http
-        - containerPort: {{ .Values.proxyFrontend.containerPorts.httpsTargetPort }}
+        - containerPort: {{ .Values.proxyFrontend.containerPorts.https }}
           name: https
         {{- if .Values.proxyFrontend.startupProbe.enabled }}
         startupProbe: {{- omit .Values.proxyFrontend.startupProbe "enabled" | toYaml | nindent 10 }}
