Rootless proxy frontend (#199)
* Add rootless nginx

Exclude Strict-Transport-Security from disabled tls case

Temporarily testing healthcheck issue

Add /health location

Current values

Remove healthcheck from second server

Add https healthcheck

Rootless nginx for proxy-frontend

* Add one more line in the end

* Change http and https ports for proxy-frontend

* Fix the parameter names in the proxy frontend

---------

Co-authored-by: VyacheslavSemin <vyacheslav.semin@onlyoffice.com>

--- a/templates/services/proxy-frontend.yaml
+++ b/templates/services/proxy-frontend.yaml
@@ -15,10 +15,10 @@ metadata:
   {{- end }}
 spec:
   ports:
-  - port: {{ .Values.proxyFrontend.containerPorts.http }}
+  - port: {{ .Values.proxyFrontend.service.port.http }}
     name: http
     targetPort: {{ .Values.proxyFrontend.containerPorts.http }}
-  - port: {{ .Values.proxyFrontend.containerPorts.https }}
+  - port: {{ .Values.proxyFrontend.service.port.https }}
     name: https
     targetPort: {{ .Values.proxyFrontend.containerPorts.https }}
   selector:
