--- a/templates/jobs/pre-install.yaml
+++ b/templates/jobs/pre-install.yaml
@@ -120,6 +120,42 @@ spec:
         - configMapRef:
             name: docspace
       {{- end }}
+
+
+      - name: identity-migration
+        image: onlyoffice/4testing-docspace-identity-migration:latest
+        imagePullPolicy: {{ .Values.install.job.initContainers.migrationRunner.image.pullPolicy }}
+        {{- if or .Values.containerSecurityContext.enabled .Values.install.job.containerSecurityContext.enabled }}
+        {{- $icmrsc := dict }}
+        {{- if .Values.install.job.containerSecurityContext.enabled }}
+        {{- $icmrsc = .Values.install.job.containerSecurityContext }}
+        {{- else }}
+        {{- $icmrsc = .Values.containerSecurityContext }}
+        {{- end }}
+        securityContext: {{- include "docspace.securityContext" $icmrsc | nindent 10 }}
+        {{- end }}
+        resources: {{- toYaml .Values.install.job.initContainers.migrationRunner.resources | nindent 10 }}
+        env:
+        - name: JDBC_PASSWORD
+          # valueFrom:
+          #   secretKeyRef:
+          #     name: {{ template "docspace.mysql.secretName" . }}
+          #     key: {{ .Values.connections.mysqlSecretKeyPassword }}
+          value: my-secret-pw
+        - name: JDBC_URL
+          value: {{ .Values.connections.mysqlHost }}
+        - name: JDBC_USER_NAME
+          value: {{ .Values.connections.mysqlUser }}
+        - name: JDBC_DATABASE
+          value: {{ .Values.connections.mysqlDatabase }}
+        - name: RABBIT_HOST
+          value: onlyoffice-rabbitmq
+        - name: REDIS_HOST
+          value: onlyoffice-redis    
+        envFrom:
+        - configMapRef:
+            name: docspace
+
       containers:
       - name: app-init-storage
         image: {{ include "docspace.imageRepository" (list . .Values.initContainers.initStorage.image.repository) }}:{{ default .Values.images.tag .Values.initContainers.initStorage.image.tag }}
