--- a/templates/jobs/pre-install.yaml
+++ b/templates/jobs/pre-install.yaml
@@ -120,8 +120,6 @@ spec:
         - configMapRef:
             name: docspace
       {{- end }}
-
-
       - name: identity-migration
         image: onlyoffice/4testing-docspace-identity-migration:latest
         imagePullPolicy: {{ .Values.install.job.initContainers.migrationRunner.image.pullPolicy }}
@@ -137,25 +135,26 @@ spec:
         resources: {{- toYaml .Values.install.job.initContainers.migrationRunner.resources | nindent 10 }}
         env:
         - name: JDBC_PASSWORD
-          # valueFrom:
-          #   secretKeyRef:
-          #     name: {{ template "docspace.mysql.secretName" . }}
-          #     key: {{ .Values.connections.mysqlSecretKeyPassword }}
-          value: my-secret-pw
+          valueFrom:
+            secretKeyRef:
+              name: mysql
+              key: mysql-root-password
         - name: JDBC_URL
-          value: {{ .Values.connections.mysqlHost }}
+          value: mysql
+        - name: SPRING_PROFILES_ACTIVE
+          value: dev
         - name: JDBC_USER_NAME
-          value: {{ .Values.connections.mysqlUser }}
+          # value: onlyoffice_user
+          value: root
         - name: JDBC_DATABASE
           value: {{ .Values.connections.mysqlDatabase }}
         - name: RABBIT_HOST
-          value: onlyoffice-rabbitmq
+          value: {{ .Values.connections.brokerHost }}
         - name: REDIS_HOST
-          value: onlyoffice-redis    
+          value: {{ .Values.connections.redisHost }}  
         envFrom:
         - configMapRef:
             name: docspace
-
       containers:
       - name: app-init-storage
         image: {{ include "docspace.imageRepository" (list . .Values.initContainers.initStorage.image.repository) }}:{{ default .Values.images.tag .Values.initContainers.initStorage.image.tag }}
